GYBM:  update blog paragraph type setting and styles

--- a/web/themes/custom/govt_yukon_rms/sass/custom/components/_blog-module.scss
+++ b/web/themes/custom/govt_yukon_rms/sass/custom/components/_blog-module.scss
@@ -163,6 +163,10 @@
     overflow: hidden;
     position: relative;
 
+    & > img {
+      width: 100%;
+    }
+
     & > .media,
     & > .slick-list {
       min-height: 100%;
