--- a/web/themes/custom/govt_yukon_rms/sass/custom/components/_subscribe-block.scss
+++ b/web/themes/custom/govt_yukon_rms/sass/custom/components/_subscribe-block.scss
@@ -6,7 +6,7 @@
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, .27);
   border-bottom: 10px solid $c-tertiary;
   padding: 0;
-  margin-bottom: 2.5rem;
+  margin-bottom: rem(36px);
 
   // Title.
   h2 {
