--- a/web/themes/custom/govt_yukon_rms/sass/custom/components/_subscribe-block.scss
+++ b/web/themes/custom/govt_yukon_rms/sass/custom/components/_subscribe-block.scss
@@ -55,7 +55,7 @@
     }
 
     // Manage subscription button.
-    #edit-manage {
+    a[id^="edit-manage"] {
       font-size: $fs-base;
     }
   }
