--- a/web/themes/custom/govt_yukon_rms/sass/custom/style.scss
+++ b/web/themes/custom/govt_yukon_rms/sass/custom/style.scss
@@ -40,3 +40,6 @@
 // Nodes.
 @import 'nodes/career-profile';
 @import 'nodes/community-profile';
+
+// Library Overrides.
+@import 'library-overrides/add-to-any';
