--- a/web/themes/custom/govt_yukon_rms/templates/layout/page--type--blog.html.twig
+++ b/web/themes/custom/govt_yukon_rms/templates/layout/page--type--blog.html.twig
@@ -1,4 +1,4 @@
-{% extends '@govt_yukon/templates/layout/page.html.twig' %}
+{% extends 'page.html.twig' %}
 
 {% block page_body %}
   {% set site_content_attributes = create_attribute() %}
@@ -15,10 +15,15 @@
   Render sidebars to check if it is truly empty.
   Issue: https://www.drupal.org/node/953034.
   #}
-  {% set left_sidebar_rendered = page.sidebar|render %}
-  {% set left_sidebar_exists = left_sidebar_rendered|striptags('<a><img>')|trim ? true : false %}
+  {%- macro hasContent(region) -%}
+    {%- set keep_tags = '<drupal-render-placeholder><form><embed><hr><iframe><img><input><link><object><script><source><style><video>' -%}
+    {%- set content = region|render|replace({"\n": "", "\r": "", "\t": ""})|striptags(keep_tags)|trim ? true : false -%}
+    {{- content -}}
+  {%- endmacro -%}
 
-  {% set right_sidebar_exists = page.sidebar_second|render %}
+  {% set left_sidebar_exists  = _self.hasContent(page.sidebar) %}
+  {% set right_sidebar_exists  = _self.hasContent(page.sidebar_second) %}
+  {% set both_sidebars_exist = left_sidebar_exists and right_sidebar_exists %}
 
   {# Set column class based on sidebars. #}
   {% if left_sidebar_exists and right_sidebar_exists %}
@@ -39,7 +44,7 @@
       (node and node.field_disable_page_top_margin.value) ? 'site-content--disable-top-margin',
       left_sidebar_exists ? 'site-content--with-left-sidebar',
       right_sidebar_exists ? 'site-content--with-right-sidebar',
-      (right_sidebar_exists and right_sidebar_exists) ? 'site-content--with-both-sidebars',
+      both_sidebars_exist ? 'site-content--with-both-sidebars',
       page_accent ? 'site-content--with-page-accent'
     ]
   %}
@@ -92,43 +97,40 @@
         {% endif %}
         {# / Page Banner. #}
 
-        {% block page_title %}
-          {% if not (node and node.field_hide_header_elements.value) %}
-            {% if page.page_title %}
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="page-title-header">
-                    <div class="page-title-overline">
-                      <p class="h-overline">{{ 'Yukon Career Paths Blog'|t }}</p>
-                    </div>
-                    <div class="page-title-header__content">
-                      <div class="page-title-header__page-title">
-                        {{ page.page_title }}
+        {# Blog Post Header. #}
+        <div class="container g-0">
+          <div class="row">
+            <div class="col-sm-12">
+              <div class="blog-post-header">
+                <p class="h-overline">{{ 'Yukon Career Paths Blog'|t }}</p>
+                {% block page_title %}
+                  {% if page.page_title %}
+                    <div class="page-title-header">
+                      <div class="page-title-header__content">
+                        <div class="page-title-header__page-title">
+                          {{ page.page_title }}
+                        </div>
                       </div>
-                      {% if share_this_page %}
-                        {{ share_this_page_content }}
-                      {% endif %}
                     </div>
-                  </div>
-                </div>
+                  {% endif %}
+                {% endblock page_title %}
+
+                {# Blog Date. #}
+                {% if node and node.field_blog_date.value %}
+                  {{ drupal_field('field_blog_date', 'node', node.id, 'default') }}
+                {% endif %}
+                {# / Blog Date. #}
               </div>
-            {% endif %}
-          {% endif %}
-        {% endblock page_title %}
+            </div>
+          </div>
+        </div>
+        {# / Blog Post Header. #}
 
         <div class="row">
           {# Left Sidebar. #}
           {% if left_sidebar_exists %}
             <div class="{{ sidebar_col_class }}">
               <aside class="site-sidebar site-sidebar--left" role="complementary">
-                <h4 class="site-sidebar__root-title">
-                  {% if parent_root_title %}
-                    {{ parent_root_title }}
-                  {% else %}
-                    {{ drupal_title() }}
-                  {% endif %}
-                </h4>
-
                 {{ page.sidebar }}
               </aside>
             </div>
@@ -160,6 +162,16 @@
               {% endif %}
             </div>
           </div>
+
+          {# Right Sidebar. #}
+          {% if right_sidebar_exists %}
+            <div class="{{ sidebar_col_class }}">
+              <aside class="site-sidebar site-sidebar--right" role="complementary">
+                {{ page.sidebar_second }}
+              </aside>
+            </div>
+          {% endif %}
+          {# / Right Sidebar. #}
         </div>
       </div>
     </main>
