--- a/web/themes/custom/govt_yukon_rms/templates/views/views-view--blogs.html.twig
+++ b/web/themes/custom/govt_yukon_rms/templates/views/views-view--blogs.html.twig
@@ -52,7 +52,7 @@
       {{ header }}
     </div>
   {% endif %}
-  <hr>
+  <div class="comp-divider"></div>
   {% if exposed %}
     <div class="view-filters">
       {{ exposed }}
