--- a/web/themes/custom/govt_yukon_rms/templates/content/node--blog--teaser.html.twig
+++ b/web/themes/custom/govt_yukon_rms/templates/content/node--blog--teaser.html.twig
@@ -104,6 +104,6 @@
         {{ label }}
       </div>
     </a>
-    {{ content.field_tags }}
+    {{ content.field_blog_categories }}
   </div>
 </div>
