--- a/web/themes/custom/govt_yukon_rms/templates/blocks/block--views-block--blogs-recent-posts-block.html.twig
+++ b/web/themes/custom/govt_yukon_rms/templates/blocks/block--views-block--blogs-recent-posts-block.html.twig
@@ -36,7 +36,7 @@
 <div{{ attributes.addClass(classes) }}>
   {{ title_prefix }}
   {% if label %}
-    <h2{{ title_attributes.addClass('site-sidebar__root-title') }}>{{ label }}</h2>
+    <h2{{ title_attributes.addClass('lando site-sidebar__root-title') }}>{{ label }}</h2>
   {% endif %}
   {{ title_suffix }}
   {% block content %}
