--- a/web/themes/custom/govt_yukon_rms/sass/custom/components/_recent-posts-block.scss
+++ b/web/themes/custom/govt_yukon_rms/sass/custom/components/_recent-posts-block.scss
@@ -12,9 +12,11 @@
 
     .views-field-field-blog-date {
       font-size: $fs-base;
+      color: $c-zinc;
     }
 
     .views-field-title a {
+      font-weight: 500;
       text-decoration: none;
     }
   }
