--- a/web/themes/custom/govt_yukon_rms/templates/content/node--blog.html.twig
+++ b/web/themes/custom/govt_yukon_rms/templates/content/node--blog.html.twig
@@ -85,28 +85,18 @@
     <div class="blog-post__meta container g-0">
       <div class="row justify-content-between align-items-center">
         <div class="col-xs-12 col-md-auto">
-          <div class="author">
-            {% set author_picture_uri = node.getOwner.user_picture|file_uri %}
-            {% if author_picture_uri is not null %}
-              <div class="author__picture" style="background-image: url({{ author_picture_uri|image_style('thumbnail') }})"></div>
-            {% endif %}
-            {% if node.getOwner.name.value %}
-              <div class="author__info">
-                <div class="author__info__name">
-                  {{ node.getOwner.name.value }}
-                </div>
-                {% if node.getOwner.field_role.value %}
-                  <div class="author__info__role">
-                    {{ node.getOwner.field_role.value }}
-                  </div>
-                {% endif %}
-              </div>
-            {% endif %}
+          <div class="blog-post__published-on">
+            <div class="h4 blog-post__published-on__label">
+              {{ 'Published on'|t }}
+            </div>
+            <div class="blog-post__published-on__date">
+              {{ content.field_blog_date }}
+            </div>
           </div>
         </div>
         <div class="col-xs-12 col-md-auto">
           <div class="blog-post__meta__share-title">
-            {{ "Share this page"|t }}
+            {{ 'Share this page'|t }}
           </div>
           <div class="blog-post__meta__share">
             {{ content.group_author_social }}
